--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Shaw Talebi
+title: Maulana Mubarak Ahmad
 logo: /assets/img/headshot.png
 #description: text below image
 show_downloads: true
